--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -1,8 +1,18 @@
 % ************************** Thesis Acknowledgements **************************
 
 \begin{acknowledgements}
+
 TODO - finish acknowledgements
-And I would like to acknowledge ...
+
+First and foremost, I would like to sincerely thank my advisor Alpha Lee for his help, guidance and for the freedom I was granted throughout these years.
+
+In alphabetical order, I would also like to thank my colleagues who \dots: Dávid, Emma, Felix,  Janosh, Kadi, Penny, Rokas, Rhys.
+
+David, Michelle, Brian. Gates scholars. CUHKPGSA?
+
+I would finally like to warmly thank my dear housemates Dávid and Eszti for their help in moments of doubt.
+
+WM acknowledges the support of the Gates Cambridge Trust.
 
 \begin{itemize}
     \item Alpha
