working on library section

--- a/References/references.bib
+++ b/References/references.bib
@@ -3496,3 +3496,33 @@
   volume  = {120},
   year    = {2023}
 }
+
+@article{Goldman2022ChemicalDesignLevels,
+  author  = {Goldman, Brian and Kearnes, Steven and Kramer, Trevor and Riley, Patrick and Walters, W. Patrick},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {10},
+  pages   = {7073-7087},
+  title   = {Defining Levels of Automated Chemical Design},
+  volume  = {65},
+  year    = {2022}
+}
+
+@article{Polishchuk2020Crem,
+  author  = {Polishchuk, Pavel},
+  journal = {Journal of Cheminformatics},
+  number  = {1},
+  pages   = {28},
+  title   = {CReM: chemically reasonable mutations framework for structure generation},
+  volume  = {12},
+  year    = {2020}
+}
+
+@article{Degen2008brics,
+  author  = {Degen, J{\"o}rg and Wegscheid-Gerlach, Christof and Zaliani, Andrea and Rarey, Matthias},
+  journal = {ChemMedChem},
+  number  = {10},
+  pages   = {1503-1507},
+  title   = {On the Art of Compiling and Using 'Drug-Like' Chemical Fragment Spaces},
+  volume  = {3},
+  year    = {2008}
+}
