library section done

--- a/References/references.bib
+++ b/References/references.bib
@@ -3526,3 +3526,13 @@
   volume  = {3},
   year    = {2008}
 }
+
+@article{Dalke2018mmpdb,
+  author  = {Dalke, Andrew and Hert, J{\'e}r{\^o}me and Kramer, Christian},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {5},
+  pages   = {902-910},
+  title   = {mmpdb: An Open-Source Matched Molecular Pair Platform for Large Multiproperty Data Sets},
+  volume  = {58},
+  year    = {2018}
+}
