--- a/References/references.bib
+++ b/References/references.bib
@@ -27,7 +27,9 @@
 @misc{Kovacs2020MolecularExplainer,
   title        = {{Molecular Transformer Explainer}},
   author       = {Kovacs, David P and McCorkindale, William and Lee, Alpha A.},
-  howpublished = {https://github.com/davkovacs/MTExplainer.git}
+  howpublished = {https://github.com/davkovacs/MTExplainer.git},
+  urlseen      = {10-03-21},
+  year         = {2021}
 }
 
 @article{Bender2018,
@@ -773,7 +775,9 @@
 @misc{rdkit,
   author       = {Greg Landrum},
   title        = {R{DK}it: Open-source cheminformatics},
-  howpublished = {http://www.rdkit.org}
+  howpublished = {http://www.rdkit.org},
+  urlseen      = {07-03-23},
+  year         = {2023}
 } 
 
 @misc{soapxx,
@@ -785,7 +789,9 @@
 @misc{moonshot2020,
   author       = {{PostEra Inc.}},
   title        = {{COVID} Moonshot},
-  howpublished = {https://postera.ai/covid}
+  howpublished = {https://postera.ai/covid},
+  urlseen      = {10-05-22},
+  year         = {2022}
 }
 
 @article{dscribe,
@@ -1423,15 +1429,19 @@
 }
 
 @misc{ChemSpace,
-  title   = {Chemspace: Lead-like compounds},
+  author  = {Chemspace},
   url     = {https://chem-space.com/compounds/lead-like-compounds},
-  journal = {Lead-Like compounds | Chemspace}
+  title   = {Lead-Like compounds},
+  urlseen = {10-05-22},
+  year    = {2023}
 } 
 
 @misc{SMARTS,
   title   = {SMARTS - A Language for Describing Molecular Patterns},
   url     = {https://www.daylight.com/dayhtml/doc/theory/theory.smarts.html},
-  journal = {Daylight Chemical Information Systems}
+  author  = {Daylight Chemical Information Systems},
+  urlseen = {07-03-23},
+  year    = {2022}
 } 
 
 @article{Baell2010Pains,
@@ -1531,27 +1541,6 @@
   year          = {2020},
   bdsk-url-1    = {https://doi.org/10.1038/s41467-020-18709-w}
 }
-
-
-@article{Alon2021SigmaTwo,
-  author        = {Alon, Assaf and Lyu, Jiankun and Braz, Joao M. and Tummino, Tia A. and Craik, Veronica and O'Meara, Matthew J. and Webb, Chase M. and Radchenko, Dmytro S. and Moroz, Yurii S. and Huang, Xi-Ping and Liu, Yongfeng and Roth, Bryan L. and Irwin, John J. and Basbaum, Allan I. and Shoichet, Brian K. and Kruse, Andrew C.},
-  da            = {2021/12/01},
-  date-added    = {2022-03-24 11:13:14 +0000},
-  date-modified = {2022-03-24 11:13:14 +0000},
-  doi           = {10.1038/s41586-021-04175-x},
-  id            = {Alon2021},
-  isbn          = {1476-4687},
-  journal       = {Nature},
-  number        = {7890},
-  pages         = {759--764},
-  title         = {Structures of the $$\sigma$$2 receptor enable docking for bioactive ligand discovery},
-  ty            = {JOUR},
-  url           = {https://doi.org/10.1038/s41586-021-04175-x},
-  volume        = {600},
-  year          = {2021},
-  bdsk-url-1    = {https://doi.org/10.1038/s41586-021-04175-x}
-}
-
 
 @article{Lyu2019UltraLargeDocking,
   author        = {Lyu, Jiankun and Wang, Sheng and Balius, Trent E. and Singh, Isha and Levit, Anat and Moroz, Yurii S. and O'Meara, Matthew J. and Che, Tao and Algaa, Enkhjargal and Tolmachova, Kateryna and Tolmachev, Andrey A. and Shoichet, Brian K. and Roth, Bryan L. and Irwin, John J.},
@@ -3479,11 +3468,11 @@
   year    = {2020}
 }
 
-@online{roccurve,
+@misc{roccurve,
   author  = {Wikimedia Commons},
   title   = {Receiver Operating Characteristic (ROC) curve},
   year    = {2018},
-  urlseen = {07-03-22},
+  urlseen = {07-03-23},
   url     = {https://commons.wikimedia.org/wiki/File:Roc_curve.svg},
   note    = {\url{https://commons.wikimedia.org/wiki/File:Roc_curve.svg}}
 }
