urls for references

--- a/References/references.bib
+++ b/References/references.bib
@@ -27,7 +27,7 @@
 @misc{Kovacs2020MolecularExplainer,
   title        = {{Molecular Transformer Explainer}},
   author       = {Kovacs, David P and McCorkindale, William and Lee, Alpha A.},
-  howpublished = {https://github.com/davkovacs/MTExplainer.git},
+  howpublished = {\url{https://github.com/davkovacs/MTExplainer.git}},
   urlseen      = {10-03-21},
   year         = {2021}
 }
@@ -745,7 +745,7 @@
 @misc{ElsevierReaxysDatabase,
   title        = {{Reaxys Database}},
   author       = {{Elsevier}},
-  howpublished = {https://www.reaxys.com/}
+  howpublished = {\url{https://www.reaxys.com/}}
 }
 
 
@@ -775,7 +775,7 @@
 @misc{rdkit,
   author       = {Greg Landrum},
   title        = {R{DK}it: Open-source cheminformatics},
-  howpublished = {http://www.rdkit.org},
+  howpublished = {\url{http://www.rdkit.org}},
   urlseen      = {07-03-23},
   year         = {2023}
 } 
@@ -789,7 +789,7 @@
 @misc{moonshot2020,
   author       = {{PostEra Inc.}},
   title        = {{COVID} Moonshot},
-  howpublished = {https://postera.ai/covid},
+  howpublished = {\url{https://postera.ai/covid}},
   urlseen      = {10-05-22},
   year         = {2022}
 }
@@ -1070,7 +1070,7 @@
   author       = {Howard, Jeremy and others},
   year         = {2018},
   publisher    = {GitHub},
-  howpublished = {https://github.com/fastai/fastai}
+  howpublished = {\url{https://github.com/fastai/fastai}}
 }
 
 @article{schwaller2019molecular,
@@ -3554,4 +3554,14 @@
   eprint        = {1908.01425},
   archiveprefix = {arXiv},
   primaryclass  = {cs.LG}
+}
+
+@article{Kumar2011diallinine,
+  author  = {M. Saravana Kumar and R. Tamilarasan and A. Sreekanth},
+  journal = {Spectrochimica Acta Part A: Molecular and Biomolecular Spectroscopy},
+  number  = {2},
+  pages   = {370-375},
+  title   = {4-Salicylideneamino-3-methyl-1,2,4-triazole-5-thione as a sensor for aniline recognition},
+  volume  = {79},
+  year    = {2011}
 }
