drafting test chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
 % ******************************* PhD Thesis Template **************************
 % Please have a look at the README.md file for info on how to use the template
 
-\documentclass[a4paper, 12pt, times, numbered, draft, chapter]{Classes/PhDThesisPSnPDF}
+\documentclass[a4paper, 12pt, times, numbered, draft]{Classes/PhDThesisPSnPDF}
 
 % ******************************************************************************
 % ******************************* Class Options ********************************
@@ -104,11 +104,11 @@
 
 \ifdefineChapter
  	% \includeonly{Chapters/Preface/preface}
- 	\includeonly{Chapters/Background/background}
+ 	% \includeonly{Chapters/Background/background}
  	% \includeonly{Chapters/Ranking/ranking}
  	% \includeonly{Chapters/Fresco/fresco}
  	% \includeonly{Chapters/Transformer/transformer}
- 	% \includeonly{Chapters/Crude/test}
+ 	\includeonly{Chapters/Crude/test}
 
 \fi
 
