--- a/References/references.bib
+++ b/References/references.bib
@@ -2103,8 +2103,6 @@
   year    = {2018}
 }
 
-
-
 @article{McCloskey2020DNALibrary,
   author  = {McCloskey, Kevin and Sigel, Eric A. and Kearnes, Steven and Xue, Ling and Tian, Xia and Moccia, Dennis and Gikunju, Diana and Bazzaz, Sana and Chan, Betty and Clark, Matthew A. and Cuozzo, John W. and Gui{\'e}, Marie-Aude and Guilinger, John P. and Huguet, Christelle and Hupp, Christopher D. and Keefe, Anthony D. and Mulhern, Christopher J. and Zhang, Ying and Riley, Patrick},
   journal = {Journal of Medicinal Chemistry},
@@ -3564,4 +3562,14 @@
   title   = {4-Salicylideneamino-3-methyl-1,2,4-triazole-5-thione as a sensor for aniline recognition},
   volume  = {79},
   year    = {2011}
+}
+
+@article{Baker2020crudefragments,
+  author  = {Baker, Lisa M. and Aimon, Anthony and Murray, James B. and Surgenor, Allan E. and Matassova, Natalia and Roughley, Stephen D. and Collins, Patrick M. and Krojer, Tobias and von Delft, Frank and Hubbard, Roderick E.},
+  journal = {Communications Chemistry},
+  number  = {1},
+  pages   = {122},
+  title   = {Rapid optimisation of fragments and hits to lead compounds from screening of crude reaction mixtures},
+  volume  = {3},
+  year    = {2020}
 }
