finish the intro

--- a/References/references.bib
+++ b/References/references.bib
@@ -3573,3 +3573,13 @@
   volume  = {3},
   year    = {2020}
 }
+
+@article{Lim2022DELCountML,
+  author  = {Lim, Katherine S. and Reidenbach, Andrew G. and Hua, Bruce K. and Mason, Jeremy W. and Gerry, Christopher J. and Clemons, Paul A. and Coley, Connor W.},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {10},
+  pages   = {2316-2331},
+  title   = {Machine Learning on DNA-Encoded Library Count Data Using an Uncertainty-Aware Probabilistic Loss Function},
+  volume  = {62},
+  year    = {2022}
+}
