--- a/References/references.bib
+++ b/References/references.bib
@@ -3583,3 +3583,13 @@
   volume  = {62},
   year    = {2022}
 }
+
+@article{Stepan2011aniline,
+  author  = {Stepan, Antonia F. and Walker, Daniel P. and Bauman, Jonathan and Price, David A. and Baillie, Thomas A. and Kalgutkar, Amit S. and Aleo, Michael D.},
+  journal = {Chemical Research in Toxicology},
+  number  = {9},
+  pages   = {1345-1410},
+  title   = {Structural Alert/Reactive Metabolite Concept as Applied in Medicinal Chemistry to Mitigate the Risk of Idiosyncratic Drug Toxicity: A Perspective Based on the Critical Examination of Trends in the Top 200 Drugs Marketed in the United States},
+  volume  = {24},
+  year    = {2011}
+}
