--- a/References/references.bib
+++ b/References/references.bib
@@ -3593,3 +3593,34 @@
   volume  = {24},
   year    = {2011}
 }
+
+@misc{Batatia2022Mace,
+  doi       = {10.48550/ARXIV.2206.07697},
+  url       = {https://arxiv.org/abs/2206.07697},
+  author    = {Batatia, Ilyes and Kovács, Dávid Péter and Simm, Gregor N. C. and Ortner, Christoph and Csányi, Gábor},
+  keywords  = {Machine Learning (stat.ML), Materials Science (cond-mat.mtrl-sci), Machine Learning (cs.LG), Chemical Physics (physics.chem-ph), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Physical sciences, FOS: Physical sciences},
+  title     = {MACE: Higher Order Equivariant Message Passing Neural Networks for Fast and Accurate Force Fields},
+  publisher = {arXiv},
+  year      = {2022},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@misc{Oldenhof2022Melloddy,
+  doi       = {10.48550/ARXIV.2210.08871},
+  url       = {https://arxiv.org/abs/2210.08871},
+  author    = {Oldenhof, Martijn and Ács, Gergely and Pejó, Balázs and Schuffenhauer, Ansgar and Holway, Nicholas and Sturm, Noé and Dieckmann, Arne and Fortmeier, Oliver and Boniface, Eric and Mayer, Clément and Gohier, Arnaud and Schmidtke, Peter and Niwayama, Ritsuya and Kopecky, Dieter and Mervin, Lewis and Rathi, Prakash Chandra and Friedrich, Lukas and Formanek, András and Antal, Peter and Rahaman, Jordon and Zalewski, Adam and Heyndrickx, Wouter and Oluoch, Ezron and Stößel, Manuel and Vančo, Michal and Endico, David and Gelus, Fabien and de Boisfossé, Thaïs and Darbier, Adrien and Nicollet, Ashley and Blottière, Matthieu and Telenczuk, Maria and Nguyen, Van Tien and Martinez, Thibaud and Boillet, Camille and Moutet, Kelvin and Picosson, Alexandre and Gasser, Aurélien and Djafar, Inal and Simon, Antoine and Arany, Ádám and Simm, Jaak and Moreau, Yves and Engkvist, Ola and Ceulemans, Hugo and Marini, Camille and Galtier, Mathieu},
+  keywords  = {Machine Learning (cs.LG), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Industry-Scale Orchestrated Federated Learning for Drug Discovery},
+  publisher = {arXiv},
+  year      = {2022},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{Schwaller2020,
+  author = {Wouter Heyndrickx and Lewis Mervin and Tobias Morawietz and Noé Sturm and Lukas Friedrich and Adam Zalewski and Anastasia Pentina and Lina Humbeck and Martijn Oldenhof and Ritsuya Niwayama and Peter Schmidtke and Nikolas Fechner and Jaak Simm and Adam Arany and Nicolas Drizard and Rama Jabal and Arina Afanasyeva and Regis Loeb and Shlok Verma and Simon Harnqvist and Matthew Holmes and Balasz Pejo and Maria Telenczuk and Nicholas Holway and Arne Dieckmann and Nicola Rieke and Djork-Arné Clevert and Michael Krug and Christopher Luscombe and Darren Green and Peter Ertl and Peter Antal and David Marcus and Nicolas Do Huu and Hideyoshi Fuji and Stephen Pickett and Gergely Acs and Eric Boniface and Bernd Beck and Yax Sun and Arnaud Gohier and Friedrich Rippmann and Ola Engkvist and Andreas H. Göller and Yves Moreau and Mathieu N. Galtier and Ansgar Schuffenhauer and Hugo Ceulemans},
+  title  = {{MELLODDY: cross pharma federated learning at unprecedented scale unlocks benefits in QSAR without compromising proprietary information}},
+  year   = {2022},
+  month  = {10},
+  url    = {https://chemrxiv.org/engage/chemrxiv/article-details/6345c0f91f323d61d7567624},
+  doi    = {10.26434/chemrxiv-2022-ntd3r}
+}
