added some references

--- a/References/references.bib
+++ b/References/references.bib
@@ -3616,11 +3616,89 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@article{Schwaller2020,
+@article{Wouter2022Melloddy,
   author = {Wouter Heyndrickx and Lewis Mervin and Tobias Morawietz and Noé Sturm and Lukas Friedrich and Adam Zalewski and Anastasia Pentina and Lina Humbeck and Martijn Oldenhof and Ritsuya Niwayama and Peter Schmidtke and Nikolas Fechner and Jaak Simm and Adam Arany and Nicolas Drizard and Rama Jabal and Arina Afanasyeva and Regis Loeb and Shlok Verma and Simon Harnqvist and Matthew Holmes and Balasz Pejo and Maria Telenczuk and Nicholas Holway and Arne Dieckmann and Nicola Rieke and Djork-Arné Clevert and Michael Krug and Christopher Luscombe and Darren Green and Peter Ertl and Peter Antal and David Marcus and Nicolas Do Huu and Hideyoshi Fuji and Stephen Pickett and Gergely Acs and Eric Boniface and Bernd Beck and Yax Sun and Arnaud Gohier and Friedrich Rippmann and Ola Engkvist and Andreas H. Göller and Yves Moreau and Mathieu N. Galtier and Ansgar Schuffenhauer and Hugo Ceulemans},
   title  = {{MELLODDY: cross pharma federated learning at unprecedented scale unlocks benefits in QSAR without compromising proprietary information}},
   year   = {2022},
   month  = {10},
   url    = {https://chemrxiv.org/engage/chemrxiv/article-details/6345c0f91f323d61d7567624},
   doi    = {10.26434/chemrxiv-2022-ntd3r}
+}
+
+@article{Bhhatarai2019ADMETox,
+  author  = {Bhhatarai, Barun and Walters, W. Patrick and Hop, Cornelis E. C. A. and Lanza, Guido and Ekins, Sean},
+  journal = {Nature Materials},
+  number  = {5},
+  pages   = {418--422},
+  title   = {Opportunities and challenges using artificial intelligence in ADME/Tox},
+  volume  = {18},
+  year    = {2019}
+}
+
+@article{Wenzel2019ADMETox,
+  author  = {Wenzel, Jan and Matter, Hans and Schmidt, Friedemann},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {3},
+  pages   = {1253-1268},
+  title   = {Predictive Multitask Deep Neural Network Models for ADME-Tox Properties: Learning from Large Data Sets},
+  volume  = {59},
+  year    = {2019}
+}
+
+@article{Irwin2020Imputation,
+  author  = {Irwin, Benedict W. J. and Levell, Julian R. and Whitehead, Thomas M. and Segall, Matthew D. and Conduit, Gareth J.},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {6},
+  pages   = {2848-2857},
+  title   = {Practical Applications of Deep Learning To Impute Heterogeneous Drug Discovery Data},
+  volume  = {60},
+  year    = {2020}
+}
+
+@article{Obrezanova2022InVivo,
+  author  = {Obrezanova, Olga and Martinsson, Anton and Whitehead, Tom and Mahmoud, Samar and Bender, Andreas and Miljkovi{\'c}, Filip and Grabowski, Piotr and Irwin, Ben and Oprisiu, Ioana and Conduit, Gareth and Segall, Matthew and Smith, Graham F. and Williamson, Beth and Winiwarter, Susanne and Greene, Nigel},
+  journal = {Molecular Pharmaceutics},
+  number  = {5},
+  pages   = {1488-1504},
+  title   = {Prediction of In Vivo Pharmacokinetic Parameters and Time--Exposure Curves in Rats Using Machine Learning from the Chemical Structure},
+  volume  = {19},
+  year    = {2022}
+}
+
+@article{Tse2021OpenMalaria,
+  author  = {Tse, Edwin G. and Aithani, Laksh and Anderson, Mark and Cardoso-Silva, Jonathan and Cincilla, Giovanni and Conduit, Gareth J. and Galushka, Mykola and Guan, Davy and Hallyburton, Irene and Irwin, Benedict W. J. and Kirk, Kiaran and Lehane, Adele M. and Lindblom, Julia C. R. and Lui, Raymond and Matthews, Slade and McCulloch, James and Motion, Alice and Ng, Ho Leung and {\"O}eren, Mario and Robertson, Murray N. and Spadavecchio, Vito and Tatsis, Vasileios A. and van Hoorn, Willem P. and Wade, Alexander D. and Whitehead, Thomas M. and Willis, Paul and Todd, Matthew H.},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {22},
+  pages   = {16450-16463},
+  title   = {An Open Drug Discovery Competition: Experimental Validation of Predictive Models in a Series of Novel Antimalarials},
+  volume  = {64},
+  year    = {2021}
+}
+
+@article{Irwin2021Imputation,
+  author  = {Irwin, Benedict W. J. and Whitehead, Thomas M. and Rowland, Scott and Mahmoud, Samar Y. and Conduit, Gareth J. and Segall, Matthew D.},
+  journal = {Applied AI Letters},
+  number  = {3},
+  pages   = {e31},
+  title   = {Deep imputation on large-scale drug discovery data},
+  volume  = {2},
+  year    = {2021}
+}
+
+@article{Goller2020BayerADMET,
+  author  = {Andreas H. G{\"o}ller and Lara Kuhnke and Floriane Montanari and Anne Bonin and Sebastian Schneckener and Antonius {ter Laak} and J{\"o}rg Wichard and Mario Lobell and Alexander Hillisch},
+  journal = {Drug Discovery Today},
+  number  = {9},
+  pages   = {1702-1709},
+  title   = {Bayer's in silico ADMET platform: a journey of machine learning over the past two decades},
+  volume  = {25},
+  year    = {2020}
+}
+
+@misc{OpenAI2023GPT4,
+  title        = {{GPT-4 Technical Report}},
+  author       = {OpenAI},
+  howpublished = {\url{https://cdn.openai.com/papers/gpt-4.pdf}},
+  urlseen      = {17-03-23},
+  year         = {2023}
 }
